<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="96dp"
        android:layout_height="61dp"
        android:layout_marginTop="52dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/backbutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/titleSignIn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="406dp"
        android:layout_height="594dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#D9D9D9"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/enter_your_sign_in_information"
            android:textSize="20sp"
            android:textColor="#000"
            />

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:drawableTint="#000"
            android:hint="@string/email"
            android:padding="12dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <ImageView
                android:id="@+id/imageViewPasswordVisibility"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignBottom="@+id/textPassword"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="334dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/visibility" />
        </RelativeLayout>

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/BlackButton"
            android:layout_width="342dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="65dp"
            android:text="@string/sign_in"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textSize="20sp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#000"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
