<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/networkerror_text1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/no_internet_1"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkerror_icon" />

    <ImageView
        android:id="@+id/networkerror_icon"
        android:layout_width="270dp"
        android:layout_height="250dp"
        android:src="@drawable/networkerror"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/networkerror_text2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/no_internet_2"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/networkerror_text1" />

    <Button
        android:id="@+id/tryagainnetwork_button"
        style="@style/TransparentButton"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:text="@string/try_again"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkerror_text2"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>