<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="96dp"
        android:layout_height="61dp"
        android:layout_marginTop="52dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/backbutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/titleSignIn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleSignIn"
        android:layout_width="229dp"
        android:layout_height="118dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/recover_password"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/formContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSignIn"
        app:srcCompat="@drawable/recover" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#D9D9D9"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/enter_the_email_who_wants_to_change_the_password"
            android:textSize="20sp"
            android:textColor="#000000"
            />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:padding="12dp" />

        <Button
            android:id="@+id/buttonCreateAccount"
            style="@style/BlackButton"
            android:layout_width="342dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/recover"
            android:textSize="35sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
